fix :  booking system

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-W94TJ64');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/fadedlines.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,11 +19,12 @@
 </head>
 
 <body>
+
   <!-- Google Tag Manager (noscript) -->
-  <!-- For users with JavaScript disabled -->
-  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W94TJ64" height="0" width="0"
-    style="display:none;visibility:hidden"></iframe></noscript> -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W94TJ64" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
   <!-- Meta Pixel Code -->
   <script>
     !function (f, b, e, v, n, t, s) {
@@ -31,17 +42,10 @@
     fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=170696314884696&ev=PageView&noscript=1" /></noscript>
-  <!-- End Meta Pixel Code -->
-  <!-- Google tag (gtag.js) -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-VT143XQ2F0"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+      src="https://www.facebook.com/tr?id=170696314884696&ev=PageView&noscript=1" />
+  </noscript>
 
-    gtag('config', 'G-VT143XQ2F0');
-  </script> -->
+
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
