hotfix: favicon.ico

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     })(window, document, 'script', 'dataLayer', 'GTM-W94TJ64');</script>
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/fadedlines.png" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fadedlines Barbershop</title>
 </head>
