fix : home and add event

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- Meta Pixel Code -->
-  <script>
+  <!-- <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
@@ -39,10 +39,14 @@
       'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '170696314884696');
     fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
+  </script> -->
+  <!-- Meta Pixel Code -->
+
+  <!-- Meta Pixel Code (noscript) -->
+  <!-- <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=170696314884696&ev=PageView&noscript=1" />
-  </noscript>
+  </noscript> -->
+  <!-- Meta Pixel Code (noscript) -->
 
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
